--- a/auth_tools.html
+++ b/auth_tools.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section border-bottom-grey text-left">
+    <section  class="sn-pt-section text-left">
         <div class="wrap clear-fix text-left">
             <div class="sn-pt-item">
                 <p class="sn-pti-title">下载授权管理工具</p>
@@ -72,18 +72,18 @@
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section  text-left">
-        <div class="wrap clear-fix text-left">
-            <div class="sn-pt-item">
-                <p class="sn-pti-title">了解更多</p>
-                <p class="sn-pti-sub-title"></p>
-                <p class="sn-pti-desc">
-                    关于授权管理工具使用的更多细节，请参考下面的链接。
-                </p>
-                <a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>
-            </div>
-        </div>
-    </section>
+    <!--<section  class="sn-pt-section  text-left">-->
+        <!--<div class="wrap clear-fix text-left">-->
+            <!--<div class="sn-pt-item">-->
+                <!--<p class="sn-pti-title">了解更多</p>-->
+                <!--<p class="sn-pti-sub-title"></p>-->
+                <!--<p class="sn-pti-desc">-->
+                    <!--关于授权管理工具使用的更多细节，请参考下面的链接。-->
+                <!--</p>-->
+                <!--<a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 
 
     <div id="footer"></div>
