--- a/company_intro.html
+++ b/company_intro.html
@@ -57,17 +57,17 @@
         <div class="wrap clear-fix ">
             <p class="sn-wen-content">
                 <span class="bolder font-size-24">可信赖的专业技术伙伴</span>
+                。，、
+                <span class="color-blue font-size-18">价值观：</span>
+                1.真心诚意尊重、善待每一个人，努力做得更好以对得起自己、同事和家人；
+                2.正道经营；
+                3.成就客户、成就自我；
+                4.围绕客户的需求持续创新；
+                5.永存变革之心，不断突破自我；
+                6.坚持奋斗精神，为奋斗者创造更好的发展空间，使奋斗者得合理回报。
 
-                <span class="color-blue font-size-18">价值观 :</span>
-                1.真心诚意尊重、 善待每-个人,努力做得更好以对得起自己、 同事和家人;
-                2.正道经营;
-                3.成就客户、 成就自我;
-                4.围绕客户的需求持续创新;
-                5.永存变革之心,不断突破自我;
-                6.坚持奋斗精神,为奋斗者创造更好的发展空间,使奋斗者得合理回报。
-
-                <span class="color-blue font-size-18">使命 :</span>
-                1.为中小企业提供最好的数据财富保护产品与服务,为中小企业的健康成长保驾护航;
+                <span class="color-blue font-size-18">使命：</span>
+                1.为中小企业提供最好的数据财富保护产品与服务，为中小企业的健康成长保驾护航；
                 2.追求全体员工物质和精神两方面的幸福。
 
                 <span class="color-blue font-size-18">愿景 :</span>
