--- a/lock_jr5_usb.html
+++ b/lock_jr5_usb.html
@@ -66,10 +66,10 @@
                             秉承软件保护行业最先进的硬件技术和设计理念，精锐5是软件企业互联网化过程中保护软件授权的不二之选。
                             <br>
                             <br>
-                            精锐5不是-款独立存在的硬件加密锁，而是深思云授权平台的一部分。通过与专业级的系统安全服务SS相配台，精锐5达到了前所未有的安全能力和应用灵活性。
+                            精锐5不是一款独立存在的硬件加密锁，而是深思云授权平台的一部分。通过与专业级的系统安全服务SS相配台，精锐5达到了前所未有的安全能力和应用灵活性。
                             <br>
                             <br>
-                            精锐5与深思云锁是软件保护功能方面100%兼容， 软件可以自由选择用精锐5还是深思云锁保护授杈，并可以实现在运行时的无缝切换。 授权也可以在精锐5和云锁之间转移，以满足用户的不同使用偏好。
+                            精锐5与深思云锁是软件保护功能方面100%兼容， 软件可以自由选择用精锐5还是深思云锁保护授权，并可以实现在运行时的无缝切换。 授权也可以在精锐5和云锁之间转移，以满足用户的不同使用偏好。
                             <br>
                             <br>
                             开发者可以使用ARM-C语言编写锁内程序，以实现个性化的功能和软件保护方式。对于大多数用户来说，与精锐5配套的Virbox Protector是更具效率的选择，可以在数分钟内完成对软件的高强度保护，不需要改写任何一行代码。
@@ -111,7 +111,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
+                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序，及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_usb_download">SDK下载</button>
