--- a/su_platform.html
+++ b/su_platform.html
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="sn-wrl-desc">
                                         <div class="sn-wr-ld-txt pre-line">
-                                            深思“碎片代码执行”即是为了解决代码移植不能很好地使用而提出的全新加密理念：利用自身成熟的外壳中的代码提取技术，抽取大量、大段代码，加密混淆后在安全环境中执行，大量的将 Vibrox、虚拟化和驱动技术应用于其中，最大程度上减少对加密锁底层技术和功能的依赖，同时大量大段地移植又保证了更高的安全性。 除了安全性，依托 SS 加密中间件，将对硬件的依赖在底层自动处理好，可以做到和深思云锁兼容，未来开发商业务无论如何变化都可以应对。 这是加密技术的一次综合应用，效果上类似于将软件打散执行，让破解者无从下手，这就是“碎片代码执行”，是深思软件保护理念的一次重大突破。
+                                            深思“碎片代码执行”即是为了解决代码移植不能很好地使用而提出的全新加密理念：利用自身成熟的外壳中的代码提取技术，抽取大量、大段代码，加密混淆后在安全环境中执行，大量的将 Virbox、虚拟化和驱动技术应用于其中，最大程度上减少对加密锁底层技术和功能的依赖，同时大量大段地移植又保证了更高的安全性。 除了安全性，依托 SS 加密中间件，将对硬件的依赖在底层自动处理好，可以做到和深思云锁兼容，未来开发商业务无论如何变化都可以应对。 这是加密技术的一次综合应用，效果上类似于将软件打散执行，让破解者无从下手，这就是“碎片代码执行”，是深思软件保护理念的一次重大突破。
                                         </div>
                                     </div>
                                 </li>
@@ -241,7 +241,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
+                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序，主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序，及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">SDK下载</button>
@@ -254,69 +254,6 @@
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_bt_download">SDK下载</button>
-                            </div>
-                        </li>
-                    </ul>
-                    <p class="sn-ld-section-title color-blue bolder margin-t-50">精锐4S</p>
-                    <ul>
-                        <li>
-                            <p class="sn-ld-title">标准版/精灵版/U盘版产品所有资源</p>
-                            <p class="sn-ld-desc">
-                                SDK下载文件内容包括：驱动安装包、开发包、U盘锁开发包、开发测试工具、设备检测工具、及各类说明文档。
-                                请点击“SDK下载”，选择“目标另存为”或者使用下载软件下载至本地文件夹，解压缩后即可，使用前请先仔细阅读说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                            </div>
-                        </li>
-                        <li>
-                            <p class="sn-ld-title">标准版/精灵版/U盘版产品所有文档</p>
-                            <p class="sn-ld-desc">
-                                资源包文件内容包括：驱动安装包、开发包、U盘锁开发包、开发测试工具、设备检测工具、及各类说明文档。
-                                请点击“资源包”，选择“目标另存为”或者使用下载软件下载至本地文件夹，解压缩后即可，使用前请先仔细阅读说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                                <button class="sn-ld-btn download js_location_url" data-url="picked_4s_sdk_download">SDK下载</button>
-                                <button class="sn-ld-btn  js_location_url" data-url="picked_4s_doc_download">资源包</button>
-                            </div>
-                        </li>
-                        <li>
-                            <p class="sn-ld-title">网络版所有资源</p>
-                            <p class="sn-ld-desc">
-                                SDK下载文件内容包括：网络版驱动程序、精锐系列驱动安装包、开发包、开发测试工具、服务管理工具、系统诊断工具、硬件测试工具、用户测试工具及各类说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                            </div>
-                        </li>
-                        <li>
-                            <p class="sn-ld-title">网络版产品所有文档</p>
-                            <p class="sn-ld-desc">
-                                资源包内容包括：快开发指南、发行说明。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                                <button class="sn-ld-btn download js_location_url" data-url="picked_4s_net_sdk_download">SDK下载</button>
-                                <button class="sn-ld-btn  js_location_url" data-url="picked_4s_net_doc_download">资源包</button>
-                            </div>
-                        </li>
-                    </ul>
-                    <p class="sn-ld-section-title color-blue bolder margin-t-50">灵锐1</p>
-                    <ul>
-                        <li>
-                            <p class="sn-ld-title">产品所有资源</p>
-                            <p class="sn-ld-desc">
-                                SDK下载文件内容包括：驱动安装包、开发包、U盘锁开发包、开发测试工具、设备检测工具、及各类说明文档。
-                                请点击“SDK下载”，选择“目标另存为”或者使用下载软件下载至本地文件夹，解压缩后即可，使用前请先仔细阅读说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                            </div>
-                        </li>
-                        <li>
-                            <p class="sn-ld-title">产品所有文档</p>
-                            <p class="sn-ld-desc">
-                                文档内容包括：快速入门、开发指南、函数参考、Delphi应用范例集及发行说明文档。
-                            </p>
-                            <div class="sn-ld-btn-list">
-                                <button class="sn-ld-btn download js_location_url" data-url="picked_1_clock_sdk_download">SDK下载</button>
-                                <button class="sn-ld-btn  js_location_url" data-url="picked_1_clock_doc_download">资源包</button>
                             </div>
                         </li>
                     </ul>
@@ -345,7 +282,7 @@
                                     <!--</div>-->
                                     <!--<div class="sn-wrl-desc">-->
                                         <!--<div class="sn-wr-ld-txt ">-->
-                                            <!--A : 确认以下问题 : 确认网络是否通 , 如客户端是否能ping通服务端。 确认眼务端的服务是否已经启动。 确认服务端的Windows防火墙已经关闭 , 如果没有关闭 , 让客户关闭Windows防火墙。 确认客户端配置文件的内容是否正确 , 如端口号和设备ID是否与服务端的一致。-->
+                                            <!--A : 确认以下问题 : 确认网络是否通 , 如客户端是否能ping通服务端。 确认服务端的服务是否已经启动。 确认服务端的Windows防火墙已经关闭 , 如果没有关闭 , 让客户关闭Windows防火墙。 确认客户端配置文件的内容是否正确 , 如端口号和设备ID是否与服务端的一致。-->
                                         <!--</div>-->
                                     <!--</div>-->
                                 <!--</li>-->
@@ -406,7 +343,7 @@
                                     <!--</div>-->
                                     <!--<div class="sn-wrl-desc">-->
                                         <!--<div class="sn-wr-ld-txt ">-->
-                                            <!--A : 申请自己的开发商编号 ( 大客户号) 。 如果没有自已的开发商编号 , 在同-台电脑上也可以同时使用多把精锐4 , 窨户可以自已设置加密锁的设备ID , 当使用S4Enum()函数列举设备时 , 所有加密锁的ID会存放到SENSE4_CONTEXT结构体的bID成员变量中 ,-->
+                                            <!--A : 申请自己的开发商编号 ( 大客户号) 。 如果没有自已的开发商编号 , 在同一台电脑上也可以同时使用多把精锐4 , 窨户可以自已设置加密锁的设备ID , 当使用S4Enum()函数列举设备时 , 所有加密锁的ID会存放到SENSE4_CONTEXT结构体的bID成员变量中 ,-->
                                             <!--这时可以根据ID的不同来区分不同的设备。-->
                                         <!--</div>-->
                                     <!--</div>-->
@@ -431,7 +368,7 @@
                                     <!--</div>-->
                                     <!--<div class="sn-wrl-desc">-->
                                         <!--<div class="sn-wr-ld-txt ">-->
-                                            <!--A : 可以将最终用户电脑的硬件信息与加密锁绑走 , 方案是将硬件信息存到数据文件中 , 将数据文件下载到锁内 , 在软件运行时读取锁内数据文件中的信息进行比较 , 如果-致才能够给正常运行软件。-->
+                                            <!--A : 可以将最终用户电脑的硬件信息与加密锁绑走 , 方案是将硬件信息存到数据文件中 , 将数据文件下载到锁内 , 在软件运行时读取锁内数据文件中的信息进行比较 , 如果一致才能够给正常运行软件。-->
                                         <!--</div>-->
                                     <!--</div>-->
                                 <!--</li>-->
