--- a/vp_tools.html
+++ b/vp_tools.html
@@ -33,7 +33,7 @@
                 <div class="sn-phcd-center">
                     <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
                     <div class="snphc-abstract color-black-3">
-                        Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件达到专业级水准。
+                        Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件安全强度达到专业级水准。
                         <br>
                         Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
                         <br>
