--- a/we_recurit.html
+++ b/we_recurit.html
@@ -332,7 +332,8 @@
                         </div>
                         <div class="sn-wr-ld-item block">
                             <span >岗位职责：</span>
-                            <div class="sn-wrli-content">: 1、 对产品的库和工具进行调试修改 ;
+                            <div class="sn-wrli-content">
+                                1、 对产品的库和工具进行调试修改 ;
                                 2、 解决产品的疑难问题 ;
                                 3、 了解需求编写需求说明书;
                                 4、 开发完整的加密方案;
