update text woe

--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
             <li><a class="info js_location_url"  data-url="about_platform" href="javascript:void(0); ">了解云授权平台</a></li>
             <li><a class="info js_location_url"  data-url="cloud_lock" href="javascript:void(0); ">云锁服务</a></li>
             <li><a class="info js_location_url"  data-url="ss_service" href="javascript:void(0); ">SS安全服务</a></li>
-            <li><a class="info js_location_url"  data-url="in_platform" href="javascript:void(0); ">进入云授权管理中心</a></li>
+            <li><a class="info js_location_url"  data-url="register" href="javascript:void(0); ">云帐号注册</a></li>
         </ul>
 
         <ul class="sn-sm-item">
@@ -34,7 +34,7 @@
         </ul>
 
         <ul class="sn-sm-item">
-            <li class="title js_location_url" data-url="support" >支持与反馈</li>
+            <li class="title js_location_url" data-url="support" >资源</li>
             <li><a class="info js_location_url"  data-url="su_download" href="javascript:void(0); ">下载中心</a></li>
             <li><a class="info js_location_url"  data-url="su_problem" href="javascript:void(0); ">常见问题</a></li>
             <li><a class="info js_location_url"  data-url="su_feedback" href="javascript:void(0); ">建议反馈</a></li>
