--- a/header.html
+++ b/header.html
@@ -43,12 +43,7 @@
                                 <!--<div class="sub-mi-desc">软件保护终极利器，云授权与硬件授权无缝切换体验。</div>-->
                             </a>
                         </li>
-                        <!--<li>-->
-                        <!--<a href="javascript:void(0);" data-url="in_platform" class="js_location_url">-->
-                        <!--<div class="sub-mi-title">进入云授权管理中心</div>-->
-                        <!--<div class="sub-mi-desc">直接用云平台发行授权，即使生效，支持离线导入至硬件加密锁。</div>-->
-                        <!--</a>-->
-                        <!--</li>-->
+
                     </ul>
                     <ul class="sub-menu-item">
                         <li class="disabled">
@@ -87,18 +82,6 @@
                                 <!--<div class="sub-mi-desc">软件版权保护与身份认证的旗舰产品。</div>-->
                             </a>
                         </li>
-                        <!--<li>-->
-                        <!--<a href="javascript:void(0);" data-url="picked_4s" class="js_location_url" >-->
-                        <!--<div class="sub-mi-title">精锐4S</div>-->
-                        <!--<div class="sub-mi-desc">经典软件版权保护产品精锐4的升级版。</div>-->
-                        <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                        <!--<a href="javascript:void(0);" data-url="picked_1" class="js_location_url" >-->
-                        <!--<div class="sub-mi-title">灵锐1</div>-->
-                        <!--<div class="sub-mi-desc">入门级硬件锁，成本优选。</div>-->
-                        <!--</a>-->
-                        <!--</li>-->
                     </ul>
                 </div>
             </div>
@@ -123,16 +106,6 @@
                 </ul>
             </div>
 
-            <!--<div>-->
-                <!--<a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案</a>-->
-                <!--<ul class="sub-menu">-->
-                    <!--<li><a href="javascript:void(0);" data-url="game_industry" class="js_location_url" >游戏行业</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="manage_industry" class="js_location_url" >管理行业</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="architecture_industry" class="js_location_url" >建筑行业</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="edu_and_doc" class="js_location_url" >教育和文档</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="common_industry" class="js_location_url" >通用行业</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
             <div>
                 <a href="javascript:void(0);" data-url="support" class="js_location_url" >资源</a>
                 <ul class="sub-menu">
@@ -149,10 +122,7 @@
                             <li><a href="javascript:void(0);" data-url="common_industry" class="js_location_url" >通用行业</a></li>
                         </ul>
                     </li>
-                    <!--<li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>-->
-                    <!--<li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>-->
-                    <li><a href="javascript:void(0);" data-url="download_4s" class="js_location_url" >精锐4</a></li>
+                    <li><a href="javascript:void(0);" data-url="download_4s" class="js_location_url" >精锐4S</a></li>
                     <li><a href="javascript:void(0);" data-url="download_1" class="js_location_url" >灵锐1</a></li>
                 </ul>
             </div>
