update text once

--- a/download_5.html
+++ b/download_5.html
@@ -39,7 +39,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序，及CSP模块。
+                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序，主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">SDK下载</button>
