--- a/footer.html
+++ b/footer.html
@@ -12,8 +12,8 @@
         <ul class="sn-sm-item">
             <li class="title js_location_url" data-url="tools">专业工具</li>
             <li><a class="info js_location_url"  data-url="vp_tools" href="vp_tools.html">Virbox Protector</a></li>
-            <li><a class="info js_location_url"  data-url="auth_tools" href="javascript:void(0); ">用户授权工具</a></li>
-            <li><a class="info js_location_url"  data-url="user_tools" href="javascript:void(0); ">用户工具</a></li>
+            <li><a class="info js_location_url"  data-url="auth_tools" href="javascript:void(0); ">开发商工具</a></li>
+            <li><a class="info js_location_url"  data-url="user_tools" href="javascript:void(0); ">许可管理工具</a></li>
         </ul>
 
         <ul class="sn-sm-item">
