--- a/header.html
+++ b/header.html
@@ -59,13 +59,13 @@
                         </li>
                         <li>
                             <a href="javascript:void(0);" data-url="auth_tools" class="js_location_url" >
-                                <div class="sub-mi-title">授权管理工具</div>
+                                <div class="sub-mi-title">开发商工具</div>
                                 <!--<div class="sub-mi-desc">协助软件企业管理软件授权的全生命周期，灵活而强大！</div>-->
                             </a>
                         </li>
                         <li>
                             <a href="javascript:void(0);" data-url="user_tools" class="js_location_url" >
-                                <div class="sub-mi-title">用户工具</div>
+                                <div class="sub-mi-title">许可管理工具</div>
                                 <!--<div class="sub-mi-desc">方便用户管理自己的软件授权，同时具有高度智能化的“一键维护”功能，大幅度减少软件企业的维护成本。</div>-->
                             </a>
                         </li>
