--- a/user_tools.html
+++ b/user_tools.html
@@ -21,15 +21,15 @@
             <span>您现在的位置：</span>
             <span>专业工具</span>   <span>></span>
             <span><a class="js_location_url" data-url="vp_tools" href="javascript:void(0)">VIRBOX PROTECTOR</a></span>    <span>|</span>
-            <span><a class="js_location_url" data-url="auth_tools"  href="javascript:void(0)">授权管理工具</a></span><span>|</span>
-            <span class="active">用户工具</span>
+            <span><a class="js_location_url" data-url="auth_tools"  href="javascript:void(0)">开发商工具</a></span><span>|</span>
+            <span class="active">许可管理工具</span>
         </div>
     </section>
 
     <!--container list-->
     <section class="text-left">
         <div class="wrap sn-big-title color-orange">
-            用户工具
+            许可管理工具
         </div>
     </section>
 
@@ -39,7 +39,7 @@
                 <p class="sn-pti-title"></p>
                 <p class="sn-pti-sub-title"></p>
                 <p class="sn-pti-desc">
-                    用户工具是提供给软件最终使用者的桌面端软件，帮助软件使用者管理自己的软件授权。
+                    许可管理工具是提供给软件最终使用者的桌面端软件，帮助软件使用者管理自己的软件授权。
                 </p>
             </div>
         </div>
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section border-bottom-grey text-left">
+    <section  class="sn-pt-section text-left">
         <div class="wrap clear-fix text-left">
             <div class="sn-pt-item">
                 <p class="sn-pti-title">关于一键维护</p>
@@ -72,18 +72,18 @@
         </div>
     </section>
 
-    <section  class="sn-pt-section  text-left">
-        <div class="wrap clear-fix text-left">
-            <div class="sn-pt-item">
-                <p class="sn-pti-title">了解更多</p>
-                <p class="sn-pti-sub-title"></p>
-                <p class="sn-pti-desc">
-                    关于用户工具使用的更多细节，请参考下面的链接。
-                </p>
-                <a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>
-            </div>
-        </div>
-    </section>
+    <!--<section  class="sn-pt-section  text-left">-->
+        <!--<div class="wrap clear-fix text-left">-->
+            <!--<div class="sn-pt-item">-->
+                <!--<p class="sn-pti-title">了解更多</p>-->
+                <!--<p class="sn-pti-sub-title"></p>-->
+                <!--<p class="sn-pti-desc">-->
+                    <!--关于开发商工具使用的更多细节，请参考下面的链接。-->
+                <!--</p>-->
+                <!--<a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 
 
     <div id="footer"></div>
