--- a/vp_tools.html
+++ b/vp_tools.html
@@ -21,8 +21,8 @@
             <span>您现在的位置：</span>
             <span>专业工具</span>   <span>></span>
             <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
+            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">开发商工具</a></span>    <span>|</span>
+            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">许可管理工具</a></span>
         </div>
     </section>
 
