--- a/we_route.html
+++ b/we_route.html
@@ -30,7 +30,7 @@
             <div class="sn-wr-list">
                 <i class="icon-self-time"></i>
                 <ul class="sn-wr-item" data-group="2016年">
-                    <li>深思软件安全二十载，面向互联网在启航</li>
+                    <li>深思软件安全二十载，面向互联网再启航</li>
                     <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
                 </ul>
                 <ul class="sn-wr-item" data-group="2015年">
@@ -38,7 +38,7 @@
                     <li>互联网+重新定义加密锁：精锐5加密锁产品问世</li>
                 </ul>
                 <ul class="sn-wr-item" data-group="2014年">
-                    <li>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生。</li>
+                    <li>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生</li>
                     <li>再次获得了二项发明专利及二项实用新型专利</li>
                     <li>让专业更专注，深思助力科大讯飞智能语音及语言技术研究安全性能提升</li>
                     <li>深思助力海康威视实现视频处理技术和视频分析技术的版权保护</li>
