--- a/auth_tools.html
+++ b/auth_tools.html
@@ -21,15 +21,15 @@
             <span>您现在的位置：</span>
             <span>专业工具</span>   <span>></span>
             <span><a class="js_location_url" data-url="vp_tools" href="javascript:void(0)">VIRBOX PROTECTOR</a></span>    <span>|</span>
-            <span class="active">授权管理工具</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
+            <span class="active">开发商工具</span>    <span>|</span>
+            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">开发商工具</a></span>
         </div>
     </section>
 
     <!--container list-->
     <section class="text-left">
         <div class="wrap sn-big-title color-orange">
-            授权管理工具
+            开发商工具
         </div>
     </section>
 
@@ -39,7 +39,7 @@
                 <p class="sn-pti-title"></p>
                 <p class="sn-pti-sub-title"></p>
                 <p class="sn-pti-desc">
-                    授权管理工具用于开发者发放软件授权，通过开发者ID保证授权的安全性。授权管理工具非常强大和灵活，开发者可以使用它：
+                    开发商工具用于开发者发放软件授权，通过开发者ID保证授权的安全性。开发商工具非常强大和灵活，开发者可以使用它：
                     <br><br>
                     • 将授权直接写入到插到本地计算机上的加密锁<br>
                     • 发布授权到深思云授权平台，用户可以立即在云端使用软件授权<br>
@@ -60,30 +60,30 @@
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section text-left">
+    <section  class="sn-pt-section border-bottom-grey  text-left">
         <div class="wrap clear-fix text-left">
             <div class="sn-pt-item">
-                <p class="sn-pti-title">下载授权管理工具</p>
+                <p class="sn-pti-title">下载开发商工具</p>
                 <p class="sn-pti-sub-title"></p>
                 <p class="sn-pti-desc">
-                    授权管理工具的离线版，也可以不依赖于深思云授权平台独立运行。对于一些特殊的开发者，例如保密单位，授权管理工具可以将所发行的授权保存为“授权包”的形式。开发者可以用适宜的方式（例如邮件）将授权包发送给用户，用户再获得授权包之后，可以通过用户工具完成授权的安装。
+                    开发商工具的离线版，也可以不依赖于深思云授权平台独立运行。对于一些特殊的开发者，例如保密单位，开发商工具可以将所发行的授权保存为“授权包”的形式。开发者可以用适宜的方式（例如邮件）将授权包发送给用户，用户再获得授权包之后，可以通过开发商工具完成授权的安装。
 
                 </p>
             </div>
         </div>
     </section>
-    <!--<section  class="sn-pt-section  text-left">-->
-        <!--<div class="wrap clear-fix text-left">-->
-            <!--<div class="sn-pt-item">-->
-                <!--<p class="sn-pti-title">了解更多</p>-->
-                <!--<p class="sn-pti-sub-title"></p>-->
-                <!--<p class="sn-pti-desc">-->
-                    <!--关于授权管理工具使用的更多细节，请参考下面的链接。-->
-                <!--</p>-->
-                <!--<a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</section>-->
+    <section  class="sn-pt-section  text-left">
+        <div class="wrap clear-fix text-left">
+            <div class="sn-pt-item">
+                <p class="sn-pti-title">了解更多</p>
+                <p class="sn-pti-sub-title"></p>
+                <p class="sn-pti-desc">
+                    关于开发商工具使用的更多细节，请参考下面的链接。
+                </p>
+                <a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>
+            </div>
+        </div>
+    </section>
 
 
     <div id="footer"></div>
