--- a/lock_jr4s_net.html
+++ b/lock_jr4s_net.html
@@ -65,7 +65,7 @@
                     <div class="fr sn-ld-detail">
                         <p class="sn-ld-section-title ">产品信息</p>
                         <p class="sn-ld-desc margin-t-20 font-size-16">
-                            硬件内置节点数管理模块，有效管理软件使用并发数量，安全可靠。适用于各种BS及CS结构下的网络软件，提供了简单实用的授权管理工具，有较高的安全性和网络环境适应性。
+                            硬件内置节点数管理模块，有效管理软件使用并发数量，安全可靠。适用于各种BS及CS结构下的网络软件，提供了简单实用的开发商工具，有较高的安全性和网络环境适应性。
                             <br>
                             <br>
                             精锐4S网络版支持“主－从”锁结构，每个主锁可以配套多个从锁进行使用，以提高可支持的并发节点数量。从锁离开主锁不能独立工作，以确保网络节点数的完整和安全。
@@ -93,7 +93,7 @@
                         <tr><td>最大功率</td><td>100 mw</td><td></td></tr>
                         <tr><td>工作温度范围</td><td>-15 ~ 75 ℃</td><td></td></tr>
                         <tr><td>工作电压</td><td>4.5 ~ 5.5V</td><td></td></tr>
-                        <tr><td>驱动程序</td><td>有驱/无驱可切换</td><td></td></tr>
+                        <tr><td>驱动程序</td><td>有驱</td><td></td></tr>
                         <tr><td>网络节点数</td><td>≤255</td><td></td></tr>
                     </table>
 
