--- a/lock_jr4s_spt.html
+++ b/lock_jr4s_spt.html
@@ -90,7 +90,7 @@
                         <tr><td>最大功率</td><td>100 mw</td><td></td></tr>
                         <tr><td>工作温度范围</td><td>-15 ~ 75 ℃</td><td></td></tr>
                         <tr><td>工作电压</td><td>4.5 ~ 5.5V</td><td></td></tr>
-                        <tr><td>驱动程序</td><td>有驱/无驱可切换</td><td></td></tr>
+                        <tr><td>驱动程序</td><td>有驱</td><td></td></tr>
                     </table>
 
                     <p class="sn-ld-section-title">平台支持：</p>
