--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -104,6 +104,7 @@
                     <p class="sn-ld-section-title">技术规格：</p>
                     <table class="sn-ld-params">
                         <tr><td width="300">扇区内擦写次数</td><td>＞1650万次</td><td width="300"></td></tr>
+                        <tr><td>最低擦写次数  </td><td>50万次</td><td></td></tr>
                         <tr><td>数据存储寿命</td><td>＞10年</td><td></td></tr>
                         <tr><td>USB通信速度</td><td>＞300 KB/秒</td><td></td></tr>
                         <tr><td>密码算法</td><td>RSA2048,ECC256,AES256,SHA1</td><td></td></tr>
@@ -111,8 +112,8 @@
                         <tr><td>工作温度范围</td><td>-15 ~ 80 ℃</td><td></td></tr>
                         <tr><td>工作电压</td><td>4.5 ~ 5.5V</td><td></td></tr>
                         <tr><td>高压保护</td><td>最高可耐受20V输入电压</td><td></td></tr>
-                        <tr><td>驱动程序</td><td>有驱/无驱自适应</td><td></td></tr>
-                        <tr><td>最大授权数</td><td>6000</td><td>不同型号</td></tr>
+                        <tr><td>驱动程序</td><td>有驱/无驱</td><td></td></tr>
+                        <tr><td>最大授权数</td><td>6000</td><td>不同版本</td></tr>
                     </table>
 
                     <p class="sn-ld-section-title">平台支持：</p>
@@ -165,7 +166,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SS客户端安装包（sense_shield_installer_pub.exe）是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序，及CSP模块。
+                                SS客户端安装包（sense_shield_installer_pub.exe）是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">SDK下载</button>
