--- a/cloud_lock.html
+++ b/cloud_lock.html
@@ -12,8 +12,8 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/locks/cloud_lock.jpg">
-
+    <!--<img width="100%" src="images/locks/cloud_lock.jpg">-->
+    <img width="100%" src="images/update_imgs/cloud_lock.jpg">
     <!--page bar 所在位置-->
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
@@ -36,7 +36,7 @@
 
     <section  class="sn-cl-section text-left">
         <div class="wrap clear-fix text-left">
-            <img class="fr margin-t-10" src="images/locks/lock.png">
+            <img class="fr margin-t-10" src="images/locks/lock_2.png">
             <div class="sn-cls-item">
                 <p class="sn-cls-title"></p>
                 <p class="sn-cls-sub-title"></p>
