--- a/download_1.html
+++ b/download_1.html
@@ -12,7 +12,8 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/download_desc.jpg">
+    <!--<img width="100%" src="images/download_desc.jpg">-->
+    <img width="100%" src="images/update_imgs/resource.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
