--- a/ss_service.html
+++ b/ss_service.html
@@ -36,7 +36,7 @@
 
     <section  class="sn-cl-section text-left">
         <div class="wrap clear-fix text-left">
-            <img class="fr margin-t-10" src="images/locks/lock.png">
+            <img class="fr margin-t-10" src="images/locks/lock_2.png">
 
             <div class="sn-cls-item">
                 <p class="sn-cls-title"></p>
