--- a/su_art.html
+++ b/su_art.html
@@ -12,14 +12,18 @@
 <body>
     <div id="header"></div>
     <!--container -->
+    <!--<section class="sn-bg-section">-->
+        <!--<img src="images/solution/t_03.jpg" width="100%">-->
+        <!--<div class="wrap sn-bg-title text-left">-->
+            <!--建筑行业：-->
+            <!--<br>-->
+            <!--增加正版收入的同时向服务化转型-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="sn-bg-section">
-        <img src="images/solution/t_03.jpg" width="100%">
-        <div class="wrap sn-bg-title text-left">
-            建筑行业：
-            <br>
-            增加正版收入的同时向服务化转型
-        </div>
+        <img src="images/update_imgs/art.jpg" width="100%">
     </section>
+
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
