--- a/su_common.html
+++ b/su_common.html
@@ -11,14 +11,18 @@
 <body>
     <div id="header"></div>
     <!--container -->
+    <!--<section class="sn-bg-section">-->
+        <!--<img src="images/solution/t_05.jpg" width="100%">-->
+        <!--<div class="wrap sn-bg-title text-left">-->
+            <!--通用行业：-->
+            <!--<br>-->
+            <!--协助软件企业互联网化-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="sn-bg-section">
-        <img src="images/solution/t_05.jpg" width="100%">
-        <div class="wrap sn-bg-title text-left">
-            通用行业：
-            <br>
-            协助软件企业互联网化
-        </div>
+        <img src="images/update_imgs/common.jpg" width="100%">
     </section>
+
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
