--- a/su_edu.html
+++ b/su_edu.html
@@ -12,14 +12,18 @@
 <body>
     <div id="header"></div>
     <!--container -->
+    <!--<section class="sn-bg-section">-->
+        <!--<img src="images/solution/t_04_02.jpg" width="100%">-->
+        <!--<div class="wrap sn-bg-title text-left">-->
+            <!--教育和文档：-->
+            <!--<br>-->
+            <!--保护数据资产，对内容进行授权-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="sn-bg-section">
-        <img src="images/solution/t_04_02.jpg" width="100%">
-        <div class="wrap sn-bg-title text-left">
-            教育和文档：
-            <br>
-            保护数据资产，对内容进行授权
-        </div>
+        <img src="images/update_imgs/edu.jpg" width="100%">
     </section>
+
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
