--- a/su_game.html
+++ b/su_game.html
@@ -12,14 +12,18 @@
 <body>
     <div id="header"></div>
     <!--container -->
+    <!--<section class="sn-bg-section">-->
+        <!--<img src="images/solution/t_01.jpg" width="100%">-->
+        <!--<div class="wrap sn-bg-title text-left">-->
+            <!--游戏行业 :-->
+            <!--<br>-->
+            <!--极致安全的整体解决方案-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="sn-bg-section">
-        <img src="images/solution/t_01.jpg" width="100%">
-        <div class="wrap sn-bg-title text-left">
-            游戏行业 :
-            <br>
-            极致安全的整体解决方案
-        </div>
+        <img src="images/update_imgs/game.jpg" width="100%">
     </section>
+
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
