--- a/su_manage.html
+++ b/su_manage.html
@@ -12,14 +12,18 @@
 <body>
     <div id="header"></div>
     <!--container -->
+    <!--<section class="sn-bg-section">-->
+        <!--<img src="images/solution/t_02.jpg" width="100%">-->
+        <!--<div class="wrap sn-bg-title text-left">-->
+            <!--管理行业：-->
+            <!--<br>-->
+            <!--满足软件纯电子化发行和云服务化需要-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="sn-bg-section">
-        <img src="images/solution/t_02.jpg" width="100%">
-        <div class="wrap sn-bg-title text-left">
-            管理行业：
-            <br>
-            满足软件纯电子化发行和云服务化需要
-        </div>
+        <img src="images/update_imgs/manage.jpg" width="100%">
     </section>
+
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
