--- a/su_platform.html
+++ b/su_platform.html
@@ -12,7 +12,8 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/slides/4.jpg">
+    <!--<img width="100%" src="images/slides/4.jpg">-->
+    <img width="100%" src="images/update_imgs/resource.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
