--- a/user_tools.html
+++ b/user_tools.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
@@ -12,8 +13,8 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/vp_tools/desc_user.jpg">
-
+    <!--<img width="100%" src="images/vp_tools/desc_user.jpg">-->
+    <img width="100%" src="images/update_imgs/user_tools.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
