--- a/auth_tools.html
+++ b/auth_tools.html
@@ -12,7 +12,8 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/vp_tools/desc_auth.jpg">
+    <!--<img width="100%" src="images/vp_tools/desc_auth.jpg">-->
+    <img width="100%" src="images/update_imgs/auth_tools.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
