--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="sn-swiper-item">
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
-                        <p>助您轻松转变商业模式变客户为用户。</p>
+                        <p>顶级安全技术全自动加密引擎远离盗版</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/1.jpg">
@@ -27,7 +27,7 @@
                 <div class="sn-swiper-item">
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
-                        <p>即时授权，提升用户体验，软件保护“零成本”。</p>
+                        <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/2.jpg">
@@ -37,7 +37,7 @@
                 <div class="sn-swiper-item">
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
-                        <p>精准掌握所有软件授权的使用情况。</p>
+                        <p>精准掌握所有软件授权使用情况 </p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/3.jpg">
@@ -47,7 +47,7 @@
                 <div class="sn-swiper-item">
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
-                        <p>顶级安全技术，全自动加密引擎，远离盗版。</p>
+                        <p>顶级安全技术全自动加密引擎 远离盗版</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/4.jpg">
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_1.jpg">
+                <img class="snphc-img" src="images/home/img_1.png">
             </div>
         </div>
     </section>
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_2.jpg">
+                <img class="snphc-img" src="images/home/img_2.png">
             </div>
         </div>
     </section>
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_4.jpg">
+                <img class="snphc-img" src="images/home/img_4.png">
             </div>
         </div>
     </section>
