--- a/platform_intro.html
+++ b/platform_intro.html
@@ -12,8 +12,8 @@
     <div id="header"></div>
     <!--container -->
     <!--<img width="100%" src="images/platform/plat_desc.jpg">-->
-    <img width="100%" src="images/platform/intro_desc.jpg">
-
+    <!--<img width="100%" src="images/platform/intro_desc.jpg">-->
+    <img width="100%" src="images/update_imgs/about_plaform.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_1.png">
+                <img class="snphc-img" src="images/platform/plat_1.jpg">
             </div>
         </div>
     </section>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_2.png">
+                <img class="snphc-img" src="images/platform/plat_2.jpg">
             </div>
         </div>
     </section>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_3.png">
+                <img class="snphc-img" src="images/platform/plat_3.jpg">
             </div>
         </div>
     </section>
@@ -143,7 +143,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_4.png">
+                <img class="snphc-img" src="images/platform/plat_4.jpg">
             </div>
         </div>
     </section>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/intro_3.jpg">
+                <img class="snphc-img" src="images/platform/intro_3.jpg" style="width: 300px;">
             </div>
         </div>
     </section>
