--- a/we_intellectual.html
+++ b/we_intellectual.html
@@ -11,7 +11,8 @@
 <body>
     <div id="header"></div>
     <!--container -->
-    <img width="100%" src="images/sense.jpg">
+    <!--<img width="100%" src="images/sense.jpg">-->
+    <img width="100%" src="images/update_imgs/clock.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
