--- a/we_property.html
+++ b/we_property.html
@@ -35,6 +35,12 @@
             <ul class="swi-list property-list">
                 <li>
                     <div class="swi-pic">
+                        <img src="images/certificate/15.jpg">
+                    </div>
+                    <div class="swi-desc">商品密码产品生产定点单位证书</div>
+                </li>
+                <li>
+                    <div class="swi-pic">
                         <img src="images/certificate/1.jpg">
                     </div>
                     <div class="swi-desc">软件企业认定证书</div>
