--- a/lock_lr1_std.html
+++ b/lock_lr1_std.html
@@ -12,11 +12,11 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/slides/4.jpg">
-
+    <!--<img width="100%" src="images/slides/4.jpg">-->
+    <img width="100%" src="images/update_imgs/clock.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
-        <div class="cloud"></div>
+
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
             <span>产品</span>   <span>></span>
