--- a/we_route.html
+++ b/we_route.html
@@ -11,11 +11,11 @@
 <body>
     <div id="header"></div>
     <!--container -->
-    <img width="100%" src="images/sense.jpg">
-
+    <!--<img width="100%" src="images/sense.jpg">-->
+    <img width="100%" src="images/update_imgs/clock.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
-        <div class="cloud"></div>
+
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
             <span>我们</span> <span>></span>
